# clankr

./: LICENSE  Makefile  README.md  pyproject.toml
agent/knowledge/: pi-auth.md
src/clankr/: Dockerfile  Dockerfile.claude  Dockerfile.pi  __init__.py  cli.py  config.py  docker.py  entrypoint.pi.sh  entrypoint.sh  paths.py  ruleset.json
src/clankr/harnesses/: __init__.py  claude.py  pi.py
src/clankr/profiles/bare/: CLAUDE.md  claude.settings.json  pi.SYSTEM.md  pi.settings.json
src/clankr/profiles/gsd/: CLAUDE.md  init  setup
