[project]
name = "clankr"
version = "1.0.4"
description = "Run coding agents in isolated Docker containers"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "Maximilian Wolf" }]
keywords = ["cli", "agents", "docker", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "tyro>=1.0.8",
]

[project.urls]
Repository = "https://github.com/MaxWolf-01/clankr"

[project.scripts]
clankr = "clankr:main"

[build-system]
requires = ["uv-build>=0.6,<1"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=9.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["clankr"]
