[project]
name = "clankr"
version = "2.0.1"
description = "Run coding agents (Claude Code, pi, ...) in isolated Docker containers"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Maximilian Wolf" }]
keywords = ["cli", "agents", "docker", "claude-code", "pi-coding-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "tyro>=1.0.8",
]

[project.urls]
Repository = "https://github.com/MaxWolf-01/clankr"

[project.scripts]
clankr = "clankr:main"

[build-system]
requires = ["uv-build>=0.6,<1"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
    "pytest>=9.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501", "SIM108"]

[tool.ruff.lint.isort]
known-first-party = ["clankr"]
